<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#091b23"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patrimonio_acumulado"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white" />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="8dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/patrimonio"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="#363A43"/>
                <TextView
                    android:id="@+id/tvPatrimonio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:textColor="#363A43"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/poder_de_compra"
                    android:textColor="#363A43"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvPoderDeCompra"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="#363A43"
                    android:textSize="23sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:gravity="center"
                android:text="Voltar"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
